--- a/src/theme.styl
+++ b/src/theme.styl
@@ -208,7 +208,7 @@ $drawer-title-bgc := $color-white
 $drawer-panel-bgc := $color-white
 $drawer-item-active-bgc := $color-light-grey-opacity
 
-// scroll-nav
+// scroll-navTab
 $scroll-nav-bgc := $color-white
 $scroll-nav-color := $color-grey
 $scroll-nav-active-color := $color-orange
